# k41-agent

./: .env.example  .gitignore  AGENTS.md  CONFIG.md  IMPROVEMENTS.md  LICENSE  README.md  a.py  app.py  architecture-comparison.md  config.sample.yaml  debug_test.py  edit_router.py  fix.py  fix_css.py  install.ps1  install.sh  main.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt  temp_edit.py  test_warning.py  uninstall.ps1  view_auth.py
.claude/: settings.local.json
.github/workflows/: release.yml
agent/: config.py  registry.py
agent/adapters/: __init__.py  base.py
agent/adapters/discord/: __init__.py  handler.py
agent/adapters/fastapi/: __init__.py  dashboard.py  router.py  schemas.py
agent/adapters/telegram/: __init__.py  handler.py
agent/bootstrap/: __init__.py  app.py  cli.py  runtime.py  settings.py  update.py  version.py
agent/core/: __init__.py  runner.py  session.py
agent/delivery/cli/: __init__.py  commands.py  repl.py  runtime.py  session.py
agent/delivery/http/: __init__.py  github_webhook.py  telegram_webhook.py
agent/graphs/: __init__.py  chat_agent.py  coding_agent.py  research_chain.py  router.py
agent/modules/admin_auth/: __init__.py  auth.py  models.py  password_policy.py  public.py  service.py
agent/modules/agent_runtime/: __init__.py  active_sessions.py  background_tasks.py  chat_stream_manager.py  models.py  public.py  repository.py  runner.py
agent/modules/agents/: README.md  __init__.py  models.py  parser.py  public.py  repository.py  service.py
agent/modules/channels/: __init__.py  agent_bridge.py  commands.py  contracts.py  diagnostics.py  manager.py  pipeline.py  public.py  registry.py  repository.py  service.py  service_specs.py
agent/modules/conversations/: __init__.py  history.py  migrations.py  models.py  repository.py  service.py
agent/modules/github/: __init__.py  client.py  config.py  migrations.py  models.py  repository.py  service.py  workspace.py  workspace_helpers.py
agent/modules/mcp/: __init__.py  catalog.py  client.py  db_models.py  install_repository.py  installer.py  migrations.py  models.py  registry_client.py  repository.py  service.py
agent/modules/notifications/: __init__.py  service.py
agent/nodes/: __init__.py  llm_node.py  tool_node.py  trim_node.py
agent/persistence/: __init__.py  database.py  models.py  store.py
agent/providers/: __init__.py  llm.py
agent/services/: __init__.py  bot_manager.py  service_manager.py
agent/shared/: extension_registry.py  integrations.py  timezone.py
agent/state/: __init__.py  base.py  extensions.py
agent/tools/: __init__.py  chat.py  common.py
docs/: agent-improvements-summary.md  agent-quick-reference.md  bugfix-default-agent-tools.md  configuration.md  deployment-verification.md  graph-registration.md  migration-from-env.md  refactor-agent-centric-api.md
local-dev/: run_discord.py  run_telegram.py  test_local.py
scripts/: verify_graphs.py
tests/: conftest.py  test_admin_auth.py  test_agent_cards.py  test_agent_errors.py  test_agent_integration.py  test_agent_runtime_runner_context.py  test_api_router.py  test_app_runtime.py  test_app_settings.py  test_background_tasks.py  test_bootstrap_app_run.py  test_bootstrap_cli.py  test_bootstrap_update.py  test_channels_extensibility.py  test_chat_stream_manager.py  test_conversations_module.py  test_core_compat.py  test_dashboard_agents.py  test_dashboard_generated_images.py  test_dashboard_router.py  test_dashboard_settings.py  test_db_url_policy.py  test_default_agent_bugfix.py  test_default_agent_tools.py  test_github_clone.py  test_github_module.py  test_http_exception_handlers.py  test_lazy_integrations.py  test_llm_provider.py  test_mcp_marketplace.py  test_mcp_module.py  test_module_public_import_boundaries.py  test_module_repositories.py  test_persistence_database_url.py  test_persistence_sqlite.py  test_phase1_compat.py  test_prompt_variables.py  test_providers_module.py  test_scheduler.py  test_service_manager.py  (+27 more)
tmp/: review.diff
(+564 files in other folders)
