[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "k41-agent"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "aiofiles>=24.1.0,<24.2.0",
    "aiosqlite>=0.22.1",
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "typer>=0.9.0,<1.0.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0,<4.0.0",
    "cryptography>=48.0.0",
    "deepagents>=0.5.2",
    "fastapi>=0.135.1",
    "langchain-anthropic>=1.4.3",
    "langchain-core>=1.2.19",
    "langchain-google-genai>=2.0.0",
    "langchain-mcp-adapters>=0.1.0",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.2",
    "mcp>=1.0.0",
    "langgraph-checkpoint-postgres>=3.0.4",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "psycopg-binary>=3.3.3",
    "pyjwt>=2.12.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.0",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.42.0",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.13.0",
    "markdownify>=0.14.1",
    "psutil>=7.2.2",
]

[project.optional-dependencies]
channel-telegram = [
    "aiogram>=3.26.0",
]
channel-discord = [
    "discord.py>=2.4.0",
]
sandbox-daytona = [
    "daytona==0.183.0",
]
sandbox-modal = [
    "modal>=1.4.0",
]
channels = [
    "aiogram>=3.26.0",
    "discord.py>=2.4.0",
]
sandboxes = [
    "daytona==0.183.0",
    "modal>=1.4.0",
]
integrations = [
    "aiogram>=3.26.0",
    "discord.py>=2.4.0",
    "daytona==0.183.0",
    "modal>=1.4.0",
]

[project.scripts]
k41 = "agent.bootstrap.cli:run_main"

[tool.setuptools.packages.find]
include = ["agent*"]
exclude = ["tests*", "tmp*", "data*"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
cache_dir = ".tmp_pytest/cache"
